<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linegray">
    <include layout="@layout/title_layout"/>

    <LinearLayout
        style="@style/me_item">
        <TextView
            style="@style/me_tv_comment"
            android:text="@string/recharge_money"/>
        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/space_20"
            android:layout_margin="@dimen/space_12"
            android:background="@color/gray"/>
        <EditText
            android:id="@+id/et_recharge_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_recharge_weixin"
        style="@style/me_item">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/weixin"
            android:padding="@dimen/normal_space"/>
        <TextView
            style="@style/me_tv_comment"
            android:text="@string/weixin"
            android:layout_marginLeft="@dimen/table_space"
            android:layout_weight="1"/>
        <ImageView
            style="@style/me_enter_image"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_recharge_zhifubao"
        style="@style/me_item.margin1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/zhifubao"
            android:layout_marginLeft="-10dp"
            android:padding="@dimen/normal_space"/>
        <TextView
            style="@style/me_tv_comment"
            android:text="@string/zhifubao"
            android:layout_weight="1"/>
        <ImageView
            style="@style/me_enter_image"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_recharge_yinlian"
        style="@style/me_item.margin1">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/yinlian"
            android:padding="@dimen/normal_space"/>
        <TextView
            style="@style/me_tv_comment"
            android:text="@string/yinlian"
            android:layout_weight="1"/>
        <ImageView
            style="@style/me_enter_image"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_recharge_beifu"
        style="@style/me_item.margin1">
        <ImageView
            android:layout_width="@dimen/space_60"
            android:layout_height="wrap_content"
            android:src="@drawable/ebatong_icon"
            android:layout_marginLeft="-10dp"
            android:padding="@dimen/normal_space"/>
        <TextView
            style="@style/me_tv_comment"
            android:text="@string/beifu"
            android:layout_weight="1"/>
        <ImageView
            style="@style/me_enter_image"/>
    </LinearLayout>
</LinearLayout>