<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <com.jhlc.grouppurchase.view.ViewPageForScrollView
            android:id="@+id/tab1_center_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/ll_tab1_indicate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_7"
        android:background="@color/white">
        <RadioButton
            android:id="@+id/rbtn_hot_group"
            style="@style/group_tab"
            android:text="@string/hot_group"
            android:checked="true"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/linegray"/>
        <RadioButton
            android:id="@+id/rbtn_attentipn_group"
            style="@style/group_tab"
            android:text="@string/attention_group" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/linegray"/>
        <RadioButton
            android:id="@+id/rbtn_create_group"
            style="@style/group_tab"
            android:text="@string/create_group" />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_group_tab1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:src="@drawable/tab_group_line_focused"/>
        <ImageView
            android:id="@+id/iv_group_tab2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:src="@drawable/tab_group_line_focused"/>
        <ImageView
            android:id="@+id/iv_group_tab3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:src="@drawable/tab_group_line_focused"/>
    </LinearLayout>

</LinearLayout>